--- a/cogsci-react/package.json
+++ b/cogsci-react/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.6.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-react": "^7.22.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "typescript": "^4.1.3"
