--- a/cogsci-react/package.json
+++ b/cogsci-react/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.16.1",
+    "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
