--- a/cogsci-react/package.json
+++ b/cogsci-react/package.json
@@ -21,6 +21,7 @@
     "react-floating-action-button": "^1.0.5",
     "react-icons": "^4.1.0",
     "react-loader-spinner": "^4.0.0",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
