--- a/cogsci-react/package.json
+++ b/cogsci-react/package.json
@@ -26,7 +26,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "react-tiny-link": "^3.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
