--- a/cogsci-react/package.json
+++ b/cogsci-react/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-floating-action-button": "^1.0.5",
     "react-icons": "^4.1.0",
