--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "email-templates": "^8.0.4",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
